Solve 1 merge conflict (hopefully)